--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<meta name="author"      content="Sebastian Bruchmann">
     
     	<title>Sebastian Bruchmann</title>
-	<link rel="shortcut icon" href="https://sebbruchmann.github.io/images/gt_favicon.png">
+	<link rel="shortcut icon" href="/images/gt_favicon.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 	
 	
   
-  <link rel="stylesheet" href="https://sebbruchmann.github.io/css/styles.min.64a6643395c6bf1ec6fff31d6429046b3ad467e58a279ff252dc019edd80a87051cf90b7fe2d589277def72d84602dcbc7115e2e17a94db3a8838336986a0ae3.css" integrity="sha512-ZKZkM5XGvx7G//MdZCkEazrUZ&#43;WKJ5/yUtwBnt2AqHBRz5C3/i1Yknfe9y2EYC3LxxFeLhepTbOog4M2mGoK4w==">
+  <link rel="stylesheet" href="/css/styles.min.64a6643395c6bf1ec6fff31d6429046b3ad467e58a279ff252dc019edd80a87051cf90b7fe2d589277def72d84602dcbc7115e2e17a94db3a8838336986a0ae3.css" integrity="sha512-ZKZkM5XGvx7G//MdZCkEazrUZ&#43;WKJ5/yUtwBnt2AqHBRz5C3/i1Yknfe9y2EYC3LxxFeLhepTbOog4M2mGoK4w==">
 
    
   
@@ -32,9 +32,9 @@
 
     
       <header id="header">
-  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('https://sebbruchmann.github.io/images/bg_head.jpg');">
+  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('/images/bg_head.jpg');">
     <h1 id="logo" class="text-center">
-      <img class='img-circle' src="https://sebbruchmann.github.io/images/guy.jpg" alt="">
+      <img class='img-circle' src="/images/guy.jpg" alt="">
       <span class="title">Dr. Sebastian Bruchmann</span>
       <span class="tagline">Senior Research Associate - University of Cambridge<br>
         <a href="mailto:shgb2@cam.ac.uk">shgb2@cam.ac.uk</a>
@@ -358,7 +358,7 @@ Therefore, I am using different sequencing-based methods (<strong>functional gen
 
 
 
-<script src="https://sebbruchmann.github.io/js/bundle.min.b6d456c2e5af821563b5e8f84cfa91c4930ee91a6952969e004f6d83be4dd9849a65c97ed650b6d2c74e9d6d2c17990733e63fa89d40d3436c44e3a252c5a296.js" integrity="sha512-ttRWwuWvghVjtej4TPqRxJMO6RppUpaeAE9tg75N2YSaZcl&#43;1lC20sdOnW0sF5kHM&#43;Y/qJ1A00NsROOiUsWilg=="></script>
+<script src="js/bundle.min.b6d456c2e5af821563b5e8f84cfa91c4930ee91a6952969e004f6d83be4dd9849a65c97ed650b6d2c74e9d6d2c17990733e63fa89d40d3436c44e3a252c5a296.js" integrity="sha512-ttRWwuWvghVjtej4TPqRxJMO6RppUpaeAE9tg75N2YSaZcl&#43;1lC20sdOnW0sF5kHM&#43;Y/qJ1A00NsROOiUsWilg=="></script>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
