--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
     
       <header id="header">
-  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('/images/bg_head.jpg');">
+  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('/images/pseudomonas.jpg');">
     <h1 id="logo" class="text-center">
-      <img class='img-circle' src="/images/guy.jpg" alt="">
+      <img class='img-circle' src="/images/seb.jpg" alt="">
       <span class="title">Dr. Sebastian Bruchmann</span>
       <span class="tagline">Senior Research Associate - University of Cambridge<br>
         <a href="mailto:shgb2@cam.ac.uk">shgb2@cam.ac.uk</a>
