--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   	<meta name="author"      content="Sebastian Bruchmann">
     
     	<title>Sebastian Bruchmann</title>
-	<link rel="shortcut icon" href="/images/gt_favicon.png">
+	<link rel="shortcut icon" href="/images/favicon-16x16.png">
 
 	
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
