--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
         
 <div class="row section topspace">
     <div class="col-md-12">
-        <div class="lead text-center text-muted">
-           <p>I want to know how, when and why bacteria use their genes and their products, and ultimately, what makes a successful pathogen.</p>
-<p>Therefore, I use microbial functional genomics, to study bacterial pathogens, in particular <!-- raw HTML omitted -->Klebsiella pneumoniae<!-- raw HTML omitted --> and other Enterobacteriaceae species (<!-- raw HTML omitted -->Salmonella Typhimurium<!-- raw HTML omitted -->, <!-- raw HTML omitted -->Enterobacter cloacae<!-- raw HTML omitted -->) and others, such as <!-- raw HTML omitted -->Mycobacterium abscessus<!-- raw HTML omitted --> or <!-- raw HTML omitted -->Burkholderia cenocepacia<!-- raw HTML omitted -->.</p>
-<p>My main research interests are <strong>Antimicrobial Resistance</strong> in Enterobacteriaceae and <strong>Host-Pathogen Interactions</strong> of <!-- raw HTML omitted -->Klebsiella pneumoniae<!-- raw HTML omitted -->.
+        <div style="font-size:1.1rem" class="lead text-muted">
+           	<p>I work with (<a href="https://www.vet.cam.ac.uk/staff/professor-julian-parkhill-frs-fmedsci">Prof. Julian Parkhill</a> at the Department of Veterinary Medicine (<a href="https://pathgenevocam.github.io/">Pathogen Genetics and Evolution Group</a>). </p> 
+		<p>I want to know how, when and why bacteria use their genes and their products, and ultimately, what makes a successful pathogen.</p>
+<p>Therefore, I use microbial functional genomics, to study bacterial pathogens, in particular <em>Klebsiella pneumoniae<em> and other Enterobacteriaceae species (<em>Salmonella<em> Typhimurium, <em>Enterobacter cloacae<em>) and others, such as <em>Mycobacterium abscessus<em> or <em>Burkholderia cenocepacia<em>.</p>
+<p>My main research interests are <strong>Antimicrobial Resistance</strong> in Enterobacteriaceae and <strong>Host-Pathogen Interactions</strong> of <em>Klebsiella pneumoniae<em>.
 Therefore, I am using different sequencing-based methods (<strong>functional genomics</strong>) to understand how bacteria adapt to certain stresses (<strong>gene regulation</strong>) and which genes are important during such conditions (<strong>gene fitness</strong>).</p>
 
         </div>
