--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 <div class="row section topspace">
     <div class="col-md-12">
         <div style="font-size:1.1rem" class="lead text-muted">
-           	<p>I work with (<a href="https://www.vet.cam.ac.uk/staff/professor-julian-parkhill-frs-fmedsci">Prof. Julian Parkhill</a> at the Department of Veterinary Medicine (<a href="https://pathgenevocam.github.io/">Pathogen Genetics and Evolution Group</a>). </p> 
+           	<p>I work with <a href="https://www.vet.cam.ac.uk/staff/professor-julian-parkhill-frs-fmedsci">Prof. Julian Parkhill</a> at the Department of Veterinary Medicine (<a href="https://pathgenevocam.github.io/">Pathogen Genetics and Evolution Group</a>) and and <a href="http://www.med.cam.ac.uk/floto/">Prof. Andres Floto</a> at the Department of Medicine and the LMB (<a href="https://www.flotolab.com/">Floto Group</a>. </p> 
 		<p>I want to know how, when and why bacteria use their genes and their products, and ultimately, what makes a successful pathogen.</p>
 <p>Therefore, I use microbial functional genomics, to study bacterial pathogens, in particular <em>Klebsiella pneumoniae<em> and other Enterobacteriaceae species (<em>Salmonella<em> Typhimurium, <em>Enterobacter cloacae<em>) and others, such as <em>Mycobacterium abscessus<em> or <em>Burkholderia cenocepacia<em>.</p>
 <p>My main research interests are <strong>Antimicrobial Resistance</strong> in Enterobacteriaceae and <strong>Host-Pathogen Interactions</strong> of <em>Klebsiella pneumoniae<em>.
