--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
     	<title>Sebastian Bruchmann</title>
 	<link rel="shortcut icon" href="/images/favicon-16x16.png">
 
-	
+    <!-- Bootstrap -->
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
 	
-	
+    <!-- Icons -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" rel="stylesheet">	
 	
-	
+    <!-- Fonts -->	  
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Alice|Open+Sans:400,300,700">
 	
-	
-  
+    <!-- Custom styles -->
   <link rel="stylesheet" href="/css/styles.min.64a6643395c6bf1ec6fff31d6429046b3ad467e58a279ff252dc019edd80a87051cf90b7fe2d589277def72d84602dcbc7115e2e17a94db3a8838336986a0ae3.css" integrity="sha512-ZKZkM5XGvx7G//MdZCkEazrUZ&#43;WKJ5/yUtwBnt2AqHBRz5C3/i1Yknfe9y2EYC3LxxFeLhepTbOog4M2mGoK4w==">
-
-   
   
 
   </head>
@@ -36,8 +34,16 @@
     <h1 id="logo" class="text-center">
       <img class='img-circle' src="/images/seb_bw.jpg" alt="">
       <span class="title">Dr. Sebastian Bruchmann</span>
-      <span class="tagline">Senior Research Associate - University of Cambridge<br>
-        <a href="mailto:shgb2@cam.ac.uk">shgb2@cam.ac.uk</a>
+      <span class="tagline">Senior Research Associate - University of Cambridge<br><br>
+				<a href="mailto:#">shgb2@cam.ac.uk </a></span>
+       <span class="follow">
+        <center>
+            <a href="https://twitter.com/Doktor_Basti"><i class="fab fa-twitter fa-1x"></i></a>
+            <a href="https://www.linkedin.com/in/sebbruchmann/"><i class="fab fa-linkedin fa-1x"></i></a>
+            <a href="https://github.com/sebbruchmann/"><i class="fab fa-github fa-1x"></i></a>
+            <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en"> <i class="ai ai-google-scholar ai-2"></i></a>
+	    <a href="https://orcid.org/0000-0001-8721-5386"> <i class="fab fa-orcid"></i></a>
+        </center>
       </span>
    </h1>
 </div>
