--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
 	
     <!-- Icons -->
-	<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.11.0/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" rel="stylesheet">	
 	
     <!-- Fonts -->	  
@@ -42,7 +42,7 @@
             <a href="https://www.linkedin.com/in/sebbruchmann/"><i class="fab fa-linkedin fa-1x"></i></a>
             <a href="https://github.com/sebbruchmann/"><i class="fab fa-github fa-1x"></i></a>
             <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en"> <i class="ai ai-google-scholar ai-2"></i></a>
-	    <a href="https://orcid.org/0000-0001-8721-5386"> <i class="fab fa-orcid"></i></a>
+	    <a href="https://orcid.org/0000-0001-8721-5386"> <i class="fa-brands fa-orcid"></i></a>
         </center>
       </span>
    </h1>
