--- a/cv.html
+++ b/cv.html
@@ -122,7 +122,7 @@
                 
                 <p  align="justify"> <b> 01/2011 – 04/2015: Technische Universität Braunschweig, Biology (Dr. rer. nat, awarded 09/2015) </b> <br> Thesis title: “Antibiotic resistance and pathogenicity in the Gram-negative bacteria <i>Pseudomonas aeruginosa</i> and <i>Klebsiella pneumoniae</i>”; in cooperation with the Helmholtz Centre for Infection Research in the Department Molecular Bacteriology <br> Supervisors: Professor Michael Steinert & Professor Susanne Häußler. </p>
 
-                <p  align="justify"> <b> 10/2008 – 11/2010: Technische Universität Braunschweig, Biology (M.Sc.). </b> <br> Thesis title: “Genetic Determinants of <i>Pseudomonas aeruginosa<\i> antibiotic resistance”. </b> <br> Supervisor: Professor Susanne Häußler </p>
+                <p  align="justify"> <b> 10/2008 – 11/2010: Technische Universität Braunschweig, Biology (M.Sc.). </b> <br> Thesis title: “Genetic Determinants of <i>Pseudomonas aeruginosa</i> antibiotic resistance”. </b> <br> Supervisor: Professor Susanne Häußler </p>
 
                 <p  align="justify"> <b> 10/2005 – 10/2008: Technische Universität Braunschweig, Biology (B.Sc.). </b> <br> Thesis title: “Establishing Chromatin immunoprecipitation-chip (ChIP-on-chip) in <i>Pseudomonas aeruginosa<\i>“. </b> <br> Supervisor: Professor Susanne Häußler </p>
              
