--- a/cv.html
+++ b/cv.html
@@ -103,7 +103,7 @@
   
   			
   			<article class="col-sm-9 maincontent">
-                <h2 id="cv">CV</h2>
+                <h2 id="cv">Curriculum Vitae</h2>
                 
                 <h3 id="positions">Academic Positions</h3>
                  <!-- <p><img src="assets/images/mac.jpg" alt="" class="" width="100%" ></p> -->
