--- a/publications.html
+++ b/publications.html
@@ -94,7 +94,7 @@
                   <h2 id="pub">Publications</h2>
 
                 <h4 id="2022">2022</h4>
-                <p  align="left"> <b> (15) </b> Alternative approaches to conduct power calculations for bacterial genome-wide association studies <br> Coll F, Gouliouris T, <u>Bruchmann S</u>, Phelan J, Raven KE, Clark TG, Parkhill J, Peacock SJ <br> <i> Communications Biology </i>, 2022 </p>
+                <p  align="left"> <b> (15) </b> Alternative approaches to conduct power calculations for bacterial genome-wide association studies <br> Coll F, Gouliouris T, <u>Bruchmann S</u>, Phelan J, Raven KE, Clark TG, Parkhill J, Peacock SJ <br> <i> Communications Biology </i>, 2022 <a href="https://pubmed.ncbi.nlm.nih.gov/35338232/">PubMed</a> </p>
                 <p  align="left"> <b> (14) </b> Mutation rate dynamics reflect ecological changes in an emerging zoonotic pathogen. <br> Murray G, Balmer AJ, Herbert J, Hadijirn NF, Kemp CL, Matuszewska M, <u>Bruchmann S</u>, Hossain ASMdM, Gottschalk M, Tucker AW, Miller E, Weinert LA. <br> <i> PLoS Genetics </i>, 2022 </p>                
 
                 <h4 id="2021">2021</h4>
