--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <li><a href="reseaerch.html">Research Interests</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
-                <li><a href="Posts.html">Posts</a></li>
+                <li><a href="posts.html">Posts</a></li>
                 
             </ul>
 
