--- a/publications.html
+++ b/publications.html
@@ -44,7 +44,6 @@
             <a href="https://www.linkedin.com/in/sebbruchmann/"><i class="fab fa-linkedin fa-1x"></i></a>
             <a href="https://github.com/sebbruchmann/"><i class="fab fa-github fa-1x"></i></a>
             <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en"> <i class="ai ai-google-scholar ai-2"></i></a>
-	    <a href="https://orcid.org/0000-0001-8721-5386"> <i class="fab fa-orcid"></i></a>
         </center>
       </span>
    </h1>
@@ -71,7 +70,7 @@
                 <li><a href="reseaerch.html">Research Interests</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
-                <li><a href="Posts.html">Posts</a></li>
+                <li><a href="posts.html">Posts</a></li>
                 
             </ul>
 
