--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
             
                 
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="reseaerch.html">Research Interests</a></li>
+                <li><a href="research.html">Research Interests</a></li>
                 <li><a href="cv.html">CV</a></li>
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="posts.html">Posts</a></li>
