--- a/research.html
+++ b/research.html
@@ -102,9 +102,9 @@
   
   			
   			<article class="col-sm-9 maincontent">
-                <h2 id="cv">Curriculum Vitae</h2>
+                <h2 id="cv">Research Interest</h2>
                 
-                <h3 id="TraDIS">Academic Positions</h3>
+                <h3 id="TraDIS">TraDIS</h3>
                  <!-- <p><img src="assets/images/mac.jpg" alt="" class="" width="100%" ></p> -->
 
                 <p  align="justify"> <b> Text </p>
