--- a/cv.html
+++ b/cv.html
@@ -44,6 +44,7 @@
             <a href="https://www.linkedin.com/in/sebbruchmann/"><i class="fab fa-linkedin fa-1x"></i></a>
             <a href="https://github.com/sebbruchmann/"><i class="fab fa-github fa-1x"></i></a>
             <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en"> <i class="ai ai-google-scholar ai-2"></i></a>
+	    <a href="https://orcid.org/0000-0001-8721-5386"> <i class="ai ai-orcid ai-2"></i></a>
         </center>
       </span>
    </h1>
