--- a/posts.html
+++ b/posts.html
@@ -106,12 +106,11 @@ nother reason is that <em>K. pneumoniae</em> strains that are not hypervirulent 
 <p>In our study, we used high-throughput genomic fitness screening in an alternative in vivo model for infection – the caterpillar <em>Galleria mellonella</em> – to identify infection-related genes in a hypervirulent and a non-hypervirulent strain of <em>K. pneumoniae</em>.
 We found that certain known virulence factors have a dominant role in infection in both strains, but that, in addition, there are many putative virulence genes that contribute to infection only in the non-hypervirulent strain.
 These have been overlooked up to now because of a lack of suitable models for investigating non-hypervirulent <em>K. pneumoniae</em>.</p>
-<p>Read more <a href="https://fems-microbiology.org/communities/pathogens-and-disease-article-award-2021/">here</a>.</p>
+<p>Read more <a href="https://fems-microbiology.org/communities/pathogens-and-disease-article-award-2021/" target="_blank">here</a>.</p>
 <hr>
 
 					</div>
 				</article>
-        
 			</div>
 		</div>
 
