--- a/research.html
+++ b/research.html
@@ -100,12 +100,11 @@
                  <!-- <p><img src="assets/images/mac.jpg" alt="" class="" width="100%" ></p> -->
 
 		<p align="left"> I am a senior research associate with an interest in microbial functional genomics, in particular <em>Klebsiella pneumoniae</em> and other Enterobacteriaceae species (<em>Salmonella</em> Typhimurium, <em>Enterobacter cloacae</em>). </p>
-		<li align="left"> After graduating from the Technical University of Braunschweig/Germany, I joined the lab of <a href="https://www.helmholtz-hzi.de/en/research/research-topics/bacterial-and-viral-pathogens/molecular-bacteriology/our-research/" target="_blank">Prof. Susanne Häussler</a> at the Helmholtz Centre for Infection Research. </li>
-		<li align="left"> During my PhD I used deep transcriptomic sequencing (RNA-seq) to study Antimicrobial Resistance in <em>Pseudomonas aeruginosa</em> and <em>Klebsiella pneumoniae</em>. </li>
-		<li align="left"> Followed by a short post-doc in the same group during which I developed rapid molecular diagnostics to detect hospital outbreaks and antibiotic resistance in several different bacterial species (mainly, <em>Pseudomonas aeruginosa</em>, <em>Klebsiella pneumoniae</em>, <em>Escherichia coli</em> and <em>Clostridium difficile</em>). </li>
+		<p align="left"> After graduating from the Technical University of Braunschweig/Germany, I joined the lab of <a href="https://www.helmholtz-hzi.de/en/research/research-topics/bacterial-and-viral-pathogens/molecular-bacteriology/our-research/" target="_blank">Prof. Susanne Häussler</a> at the Helmholtz Centre for Infection Research.
+       				 During my PhD I used deep transcriptomic sequencing (RNA-seq) to study Antimicrobial Resistance in <em>Pseudomonas aeruginosa</em> and <em>Klebsiella pneumoniae</em>. This followed a short post-doc in the same group during which I developed rapid molecular diagnostics to detect hospital outbreaks and antibiotic resistance in several different bacterial species (mainly, <em>Pseudomonas aeruginosa</em>, <em>Klebsiella pneumoniae</em>, <em>Escherichia coli</em> and <em>Clostridium difficile</em>). </p>
 		<p align="left"> In 2017, I took up a post as a postdoctoral fellow in the <a href="https://www.sanger.ac.uk/group/parkhill-group/" target="_blank">Parkhill group</a> at the Wellcome Sanger Institute using Functional Genomics (RNA-sequencing and transposon-directed insertion site sequencing, TraDIS) to understand the antimicrobial stress response in the Enterobacteriaceae species <em>Klebsiella</em>, <em>Salmonella</em> and <em>Enterobacter</em>. </p>
-		<li align="left"> In my current work at the Department of Veterinary Medicine I use different sequencing-based methods to learn how the human pathogen <em>Klebsiella pneumoniae</em> interacts with the immune system, in particular macrophages. </li>
-		<li align="left"> This latter project is funded by an UKRI MRC Research Grant. </li>
+		<p align="left"> In my current work at the Department of Veterinary Medicine I use different sequencing-based methods to learn how the human pathogen <em>Klebsiella pneumoniae</em> interacts with the immune system, in particular macrophages. 
+This 				latter project is funded by an UKRI MRC Research Grant. </p>
 
                 <h3 id="part2">part2</h3>
  
