--- a/cv.html
+++ b/cv.html
@@ -28,7 +28,7 @@
   <body class="home">
 
       <header id="header">
-  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('/images/pseudomonas_bw.jpg');">
+  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('/images/ecoli_bw.png');">
     <h1 id="logo" class="text-center">
       <img class='img-circle' src="/images/seb_bw.jpg" alt="">
       <span class="title">Dr. Sebastian Bruchmann</span>
