--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
 
     
       <header id="header">
-  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('/images/pseudomonas_bw.jpg');">
+  <div id="head" class="parallax" data-parallax-speed="2" style="background-image:url('/images/plate_hand2_bw.jpg');">
     <h1 id="logo" class="text-center">
       <img class='img-circle' src="/images/seb_bw.jpg" alt="">
       <span class="title">Dr. Sebastian Bruchmann</span>
