--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ Therefore, I am using different sequencing-based methods (<strong>functional gen
             <a class="thumbnail" href="https://academic.oup.com/femspd/article/79/3/ftab009/6123718">
                 <span class="img">
                     <img src="images/Klebs_abstract.jpeg" alt="">
-                    <span class="cover"><span class="more">See details &rarr;</span></span>
+                    <span class="cover"><span class="more">Read more &rarr;</span></span>
                 </span>
                 <span class="title">Identifying virulence determinants of multidrug-resistant Klebsiella pneumoniae in Galleria mellonella</span>
             </a>
@@ -119,7 +119,7 @@ Therefore, I am using different sequencing-based methods (<strong>functional gen
             <a class="thumbnail" href="https://www.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000335">
                 <span class="img">
                     <img src="images/discordant.png" alt="">
-                    <span class="cover"><span class="more">See details &rarr;</span></span>
+                    <span class="cover"><span class="more">Read more &rarr;</span></span>
                 </span>
                 <span class="title">Discordant bioinformatic predictions of antimicrobial resistance from whole-genome sequencing data of bacterial isolates: an inter-laboratory study</span>
             </a>
@@ -131,7 +131,7 @@ Therefore, I am using different sequencing-based methods (<strong>functional gen
             <a class="thumbnail" href="https://sfamjournals.onlinelibrary.wiley.com/doi/10.1111/1462-2920.13016">
                 <span class="img">
                     <img src="images/klebs_rnaseq.png" alt="">
-                    <span class="cover"><span class="more">See details &rarr;</span></span>
+                    <span class="cover"><span class="more">Read more &rarr;</span></span>
                 </span>
                 <span class="title">Deep transcriptome profiling of clinical Klebsiella pneumoniae isolates reveals strain and sequence type-specific adaptation</span>
             </a>
