--- a/publications.html
+++ b/publications.html
@@ -215,25 +215,18 @@
 <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
-
-
-
 <script src="js/bundle.min.b6d456c2e5af821563b5e8f84cfa91c4930ee91a6952969e004f6d83be4dd9849a65c97ed650b6d2c74e9d6d2c17990733e63fa89d40d3436c44e3a252c5a296.js" integrity="sha512-ttRWwuWvghVjtej4TPqRxJMO6RppUpaeAE9tg75N2YSaZcl&#43;1lC20sdOnW0sF5kHM&#43;Y/qJ1A00NsROOiUsWilg=="></script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-09R0RN7EFD"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  ga('create', 'GA-000000000-0', 'auto');
-  ga('send', 'pageview');
+  gtag('config', 'G-09R0RN7EFD');
 </script>
 
-</body>
-</html>
 
-    
-  </body>
-  
+</body>
 </html>
