--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,7 @@
   	<meta name="description" content="">
   	<meta name="author"      content="Sebastian Bruchmann">
     
-    	<title>Sebastian Bruchmann: publications</title>
+    	<title>Sebastian Bruchmann: Publications</title>
 	<link rel="shortcut icon" href="/images/favicon-16x16.png">
 
     <!-- Bootstrap -->
