--- a/posts.html
+++ b/posts.html
@@ -17,7 +17,7 @@
   	<meta name="description" content="">
   	<meta name="author"      content="Sebastian Bruchmann">
     
-    	<title>Sebastian Bruchmann: posts</title>
+    	<title>Sebastian Bruchmann: Posts</title>
 	<link rel="shortcut icon" href="/images/favicon-16x16.png">
 
     <!-- Bootstrap -->
