--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   	<meta name="description" content="">
   	<meta name="author"      content="Sebastian Bruchmann">
     
-    	<title>Sebastian Bruchmann: index</title>
+    	<title>Sebastian Bruchmann: Index</title>
 	<link rel="shortcut icon" href="/images/favicon-16x16.png">
 
     <!-- Bootstrap -->
