--- a/cv.html
+++ b/cv.html
@@ -47,6 +47,7 @@
        <span class="follow">
         <center>
             <a href="https://twitter.com/Doktor_Basti" target="_blank"><i class="fab fa-twitter fa-1x"></i></a>
+            <a href="https://mstdn.science/@nDoktor_Basti"><i class="fab fa-mastodon fa-1x"></i></a>
             <a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"><i class="fab fa-linkedin fa-1x"></i></a>
             <a href="https://github.com/sebbruchmann/" target="_blank"><i class="fab fa-github fa-1x"></i></a>
             <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en" target="_blank"> <i class="ai ai-google-scholar ai-2"></i></a>
