Fixed broken link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
 	
     <!-- Icons -->
-	<script defer src="https://use.fontawesome.com/releases/v6.4.2/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" rel="stylesheet">	
 	
     <!-- Fonts -->	  
@@ -48,12 +48,12 @@
 				<a href="mailto:#">shgb2@cam.ac.uk </a></span>
        <span class="follow">
         <center>
-            <a href="https://twitter.com/Doktor_Basti" target="_blank"><i class="fab fa-x-twitter fa-1x"></i></a>
+            <a href="https://twitter.com/Doktor_Basti" target="_blank"><i class="fab fa-twitter fa-1x"></i></a>
 	    <a href="https://mstdn.science/@Doktor_Basti" target="_blank"><i class="fab fa-mastodon fa-1x"></i></a>
             <a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"><i class="fab fa-linkedin fa-1x"></i></a>
             <a href="https://github.com/sebbruchmann/" target="_blank"><i class="fab fa-github fa-1x"></i></a>
             <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en" target="_blank"> <i class="ai ai-google-scholar ai-2"></i></a>
-  	    <a href="https://orcid.org/0000-0001-8721-5386" target="_blank"> <i class="ai ai-orcid ai-2"></i></a>
+	    <a href="https://orcid.org/0000-0001-8721-5386" target="_blank"> <i class="ai ai-orcid ai-2"></i></a>
 	    </center>
       </span>
    </h1>
