--- a/publications.html
+++ b/publications.html
@@ -46,7 +46,7 @@
     <h1 id="logo" class="text-center">
       <img class='img-circle' src="/images/seb_bw.jpg" alt="">
       <span class="title">Dr. Sebastian Bruchmann</span>
-      <span class="tagline">Senior Research Associate - University of Cambridge<br><br>
+      <span class="tagline">Assistant Research Professor - University of Cambridge<br><br>
 				<a href="mailto:#">shgb2@cam.ac.uk </a></span>
        <span class="follow">
         <center>
