--- a/cv.html
+++ b/cv.html
@@ -24,7 +24,7 @@
 	<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.no-icons.min.css" rel="stylesheet">
 	
     <!-- Icons -->
-	<script defer src="https://use.fontawesome.com/releases/v5.0.11/js/all.js" integrity="sha384-ImVoB8Er8knetgQakxuBS4G3RSkyD8IZVVQCAnmRJrDwqJFYUE4YOv+DbIofcO9C" crossorigin="anonymous"></script>
+	<script defer src="https://use.fontawesome.com/releases/v6.5.2/js/all.js" integrity="…appropriate-hash…" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css" rel="stylesheet">	
 	
     <!-- Fonts -->	  
