--- a/cv.html
+++ b/cv.html
@@ -46,11 +46,11 @@
 				<a href="mailto:#">shgb2@cam.ac.uk </a></span>
        <span class="follow">
         <center>
-            <a href="https://bsky.app/profile/doktorbasti.bsky.social" target="_blank"> <i class="fa-brands fa-bluesky"></i></a>
-	        <a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"> <i class="fab fa-linkedin fa-1x"></i></a>
-            <a href="https://github.com/sebbruchmann/" target="_blank"> <i class="fab fa-github fa-1x"></i></a>
-            <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en" target="_blank"> <i class="ai ai-google-scholar ai-2"></i></a>
-	    	<a href="https://orcid.org/0000-0001-8721-5386" target="_blank"> <i class="ai ai-orcid ai-2"></i></a>
+            <a href="https://bsky.app/profile/doktorbasti.bsky.social" target="_blank"> <i class="fa-brands fa-bluesky"></i> </a>
+	        <a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"> <i class="fa-brands fa-square-linkedin"></i> </a>
+            <a href="https://github.com/sebbruchmann/" target="_blank"> <i class="fa-brands fa-github"></i> </a>
+            <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en" target="_blank"> <i class="fa-brands fa-google-scholar"></i> </a>
+	    	<a href="https://orcid.org/0000-0001-8721-5386" target="_blank"> <i class="fa-brands fa-orcid"></i> </a>
         </center>
       </span>
    </h1>
@@ -150,13 +150,12 @@
 				<h3 class="widget-title">Follow me</h3>
 				<div class="widget-body">
 					<p class="follow-me-icons">
-							
-								<a href="https://twitter.com/Doktor_Basti" target="_blank"><i class="fab fa-twitter fa-1x"></i></a>
-								<a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"><i class="fab fa-linkedin fa-1x"></i></a>
-								<a href="https://github.com/sebbruchmann/" target="_blank"><i class="fab fa-github fa-1x"></i></a>
-								<a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en" target="_blank"><i class="ai ai-google-scholar ai-2"></i></a>
-								<a href="https://orcid.org/0000-0001-8721-5386" target="_blank"> <i class="ai ai-orcid ai-2"></i></a>
-								<a href="mailto:shgb2@cam.ac.uk" target="_blank"><i class="fas fa-envelope-square fa-1x"></i></a>
+								<a href="https://bsky.app/profile/doktorbasti.bsky.social" target="_blank"> <i class="fa-brands fa-bluesky"></i> </a>
+	       						<a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"> <i class="fa-brands fa-square-linkedin"></i> </a>
+           						<a href="https://github.com/sebbruchmann/" target="_blank"> <i class="fa-brands fa-github"></i> </a>
+           						<a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en" target="_blank"> <i class="fa-brands fa-google-scholar"></i> </a>
+	    						<a href="https://orcid.org/0000-0001-8721-5386" target="_blank"> <i class="fa-brands fa-orcid"></i> </a>
+								<a href="mailto:shgb2@cam.ac.uk" target="_blank"> <i class="fa-solid fa-envelope"></i> </a>
             
 					</p>
 				</div>
