--- a/cv.html
+++ b/cv.html
@@ -47,7 +47,7 @@
        <span class="follow">
         <center>
             <a href="https://bsky.app/profile/doktorbasti.bsky.social" target="_blank"> <i class="fa-brands fa-bluesky"></i> </a>
-	        <a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"> <i class="fa-brands fa-square-linkedin"></i> </a>
+	        <a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"> <i class="fa-brands fa-linkedin"></i> </a>
             <a href="https://github.com/sebbruchmann/" target="_blank"> <i class="fa-brands fa-github"></i> </a>
             <a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en" target="_blank"> <i class="fa-brands fa-google-scholar"></i> </a>
 	    	<a href="https://orcid.org/0000-0001-8721-5386" target="_blank"> <i class="fa-brands fa-orcid"></i> </a>
@@ -151,7 +151,7 @@
 				<div class="widget-body">
 					<p class="follow-me-icons">
 								<a href="https://bsky.app/profile/doktorbasti.bsky.social" target="_blank"> <i class="fa-brands fa-bluesky"></i> </a>
-	       						<a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"> <i class="fa-brands fa-square-linkedin"></i> </a>
+	       						<a href="https://www.linkedin.com/in/sebbruchmann/" target="_blank"> <i class="fa-brands fa-linkedin"></i> </a>
            						<a href="https://github.com/sebbruchmann/" target="_blank"> <i class="fa-brands fa-github"></i> </a>
            						<a href="https://scholar.google.com/citations?user=nHWAatUAAAAJ&amp;hl=en" target="_blank"> <i class="fa-brands fa-google-scholar"></i> </a>
 	    						<a href="https://orcid.org/0000-0001-8721-5386" target="_blank"> <i class="fa-brands fa-orcid"></i> </a>
