--- a/cv.html
+++ b/cv.html
@@ -145,7 +145,7 @@
 					<p>
 					<a href="mailto:shgb2@cam.ac.uk">shgb2@cam.ac.uk</a><br>
 					<br>
-					Department of Veterinary Medicine, Madingley Road, Cambridge CB3 0ES
+					Department of Medicine & HLRI University of Cambridge, Biomedical Campus, Cambridge CB2 0BB
 					</p>
 				</div>
 			</div>
